// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteGenerator - Strategy: no_prefix 17. should not create any prefixed routes by default 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: no_prefix 18. should create additional, separate routes for custom paths 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-de",
    "path": "/ueber-uns",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-ru",
    "path": "/o-nas",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: no_prefix 19. should add a redirect to the original page if \`noPrefixRedirect\` is true 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
    "redirect": "/about-us",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-en",
    "path": "/about-us",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: no_prefix 20. should not add a redirect if custom path is for a non-default locale 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-de",
    "path": "/ueber-uns",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix 9. should prefix all locales including the default one 1`] = `
[
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(en|de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix 10. should handle the root route by prefixing all locales 1`] = `
[
  {
    "alias": [],
    "children": [],
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix 11. should remove original non-prefixed routes 1`] = `
[
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(en|de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix 12. should apply custom paths to all prefixed routes 1`] = `
[
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-en",
    "path": "/:locale(en)/about-us",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-de",
    "path": "/:locale(de)/ueber-uns",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_and_default 13. should create both prefixed and non-prefixed routes for the default locale 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(en|de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_and_default 14. should create only prefixed routes for non-default locales 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(en|de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_and_default 15. should handle the root route correctly 1`] = `
[
  {
    "name": "index",
    "path": "/",
  },
  {
    "alias": [],
    "children": [],
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_and_default 16. should apply a custom path to both default locale routes 1`] = `
[
  {
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(en|de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-en",
    "path": "/about-us",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-en",
    "path": "/:locale(en)/about-us",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(de)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(en|de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(en|de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 1. should not prefix default locale for static routes 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 2. should prefix non-default locales 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 3. should handle the root route correctly 1`] = `
[
  {
    "children": [],
    "name": "index",
    "path": "/",
  },
  {
    "alias": [],
    "children": [],
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 4. should handle dynamic routes correctly 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(de|ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 5. should handle nested routes correctly 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "file": "/pages/parent/child/grandchild.vue",
            "name": "parent-child-grandchild",
            "path": "grandchild",
          },
        ],
        "file": "/pages/parent/child.vue",
        "name": "parent-child",
        "path": "child",
      },
    ],
    "file": "/pages/parent.vue",
    "name": "parent",
    "path": "/parent",
  },
  {
    "alias": [],
    "children": [
      {
        "children": [
          {
            "children": [],
            "file": "/pages/parent/child/grandchild.vue",
            "name": "localized-parent-child-grandchild",
            "path": "grandchild",
          },
        ],
        "file": "/pages/parent/child.vue",
        "name": "localized-parent-child",
        "path": "child",
      },
    ],
    "file": "/pages/parent.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-parent",
    "path": "/:locale(de|ru)/parent",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 6. should apply custom paths from \`globalLocaleRoutes\` 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about-de",
    "path": "/:locale(de)/ueber-uns",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(ru)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 7. should respect \`routeLocales\` to limit available languages for a page 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/about.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-about",
    "path": "/:locale(de)/about",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;

exports[`RouteGenerator - Strategy: prefix_except_default 8. should disable localization for a route when set to \`false\` 1`] = `
[
  {
    "children": [],
    "file": "/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "file": "/pages/about.vue",
    "name": "about",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/pages/users/[id].vue",
    "name": "users-id",
    "path": "/users/:id",
  },
  {
    "children": [],
    "file": "/pages/[...slug].vue",
    "name": "catch-all",
    "path": "/:slug(.*)*",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/index.vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-index",
    "path": "/:locale(de|ru)",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/users/[id].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-users-id",
    "path": "/:locale(de|ru)/users/:id",
  },
  {
    "alias": [],
    "children": [],
    "file": "/pages/[...slug].vue",
    "meta": {
      "alias": [],
    },
    "name": "localized-catch-all",
    "path": "/:locale(de|ru)/:slug(.*)*",
  },
]
`;
